--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,22 +4,12 @@ version = "0.1.0"
 description = "The federated lakehouse."
 license = { text = "MIT" }
 authors = [
-    { name = "Yannick Vinkesteijn" }
+    { name = "Yannick Vinkesteijn" },
+    { name = "Tim Hendriks" },
+    { name = "Marlou van de Sande"}
 ]
 readme = "README.md"
-requires-python = ">=3.12"
-classifiers = [
-    "Development Status :: 3 - Alpha",
-    "Intended Audience :: Healthcare Industry",
-    "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.12",
-    "Programming Language :: Python :: 3.13",
-    "Programming Language :: Python :: 3.14",
-    "Topic :: Scientific/Engineering :: Medical Science Apps.",
-    "Typing :: Typed",
-]
+requires-python = ">=3.13"
 
 dependencies = [
     "azure-identity>=1.25.2",
@@ -29,6 +19,7 @@ dependencies = [
     "fastapi>=0.128.7",
     "polars>=1.38.1",
     "pydantic>=2.12.5",
+    "pydantic-settings>=2.9.1",
 ]
 
 [project.urls]
@@ -43,13 +34,6 @@ synthea = [
     "tqdm>=4.67.3",
 ]
 
-# Uncomment and adjust if pluginlake has a CLI or Dagster entry point
-# [project.scripts]
-# pluginlake = "pluginlake:main"
-
-# [project.entry-points."dagster"]
-# pluginlake = "pluginlake.definitions"
-
 [build-system]
 requires = ["uv_build>=0.10.0,<0.11.0"]
 build-backend = "uv_build"
@@ -58,8 +42,17 @@ build-backend = "uv_build"
 dev = [
     "dagster-dg-cli>=1.12.14",
     "pre-commit>=4.5.1",
+    { include-group = "lint" },
+    { include-group = "test" },
+    { include-group = "security" },
+    { include-group = "docs" },
+    { include-group = "nb" },
+]
+lint = [
     "ruff>=0.15.0",
     "ty>=0.0.15",
+]   
+security = [
     "uv-secure>=0.15.4",
 ]
 test = [
