--- a/config/dagster/dagster.yaml
+++ b/config/dagster/dagster.yaml
@@ -12,11 +12,11 @@ storage:
       port: 5432
 
 compute_logs:
-  module: dagster.core.storage.local_compute_log_manager
+  module: dagster._core.storage.local_compute_log_manager
   class: LocalComputeLogManager
   config:
     base_dir: /app/compute_logs
 
 run_launcher:
-  module: dagster.core.launcher
+  module: dagster
   class: DefaultRunLauncher
