--- a/deploy/compose/docker-compose.dev.yaml
+++ b/deploy/compose/docker-compose.dev.yaml
@@ -2,15 +2,15 @@ services:
   postgres:
     image: dhi.io/postgres:17-alpine3.22
     environment:
-      POSTGRES_USER: dagster
-      POSTGRES_PASSWORD: dagster
-      POSTGRES_DB: dagster
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     ports:
       - "5432:5432"
     volumes:
       - ${POSTGRES_DATA:-../../.data/postgres}:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U dagster"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
       interval: 3s
       timeout: 1s
       retries: 10
@@ -24,10 +24,10 @@ services:
     environment:
       DAGSTER_HOME: /app/config/dagster
       DAGSTER_MODULE: ${DAGSTER_MODULE:-pluginlake.definitions}
-      DAGSTER_PG_HOST: postgres
-      DAGSTER_PG_USER: dagster
-      DAGSTER_PG_PASSWORD: dagster
-      DAGSTER_PG_DB: dagster
+      DAGSTER_PG_HOST: ${DAGSTER_PG_HOST}
+      DAGSTER_PG_USER: ${DAGSTER_PG_USER}
+      DAGSTER_PG_PASSWORD: ${DAGSTER_PG_PASSWORD}
+      DAGSTER_PG_DB: ${DAGSTER_PG_DB}
     depends_on:
       postgres:
         condition: service_healthy
