--- a/deploy/compose/docker-compose.yaml
+++ b/deploy/compose/docker-compose.yaml
@@ -1,16 +1,13 @@
 services:
   postgres:
     image: dhi.io/postgres:17-alpine3.22
-    environment:
-      POSTGRES_USER: dagster
-      POSTGRES_PASSWORD: dagster
-      POSTGRES_DB: dagster
+    env_file: .env.production
     ports:
       - "5432:5432"
     volumes:
       - dagster-postgres:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U dagster"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
       interval: 3s
       timeout: 1s
       retries: 10
@@ -21,12 +18,9 @@ services:
       dockerfile: deploy/docker/dagster-webserver.Dockerfile
     ports:
       - "3000:3000"
+    env_file: .env.production
     environment:
       DAGSTER_HOME: /app/config/dagster
-      DAGSTER_PG_HOST: postgres
-      DAGSTER_PG_USER: dagster
-      DAGSTER_PG_PASSWORD: dagster
-      DAGSTER_PG_DB: dagster
     depends_on:
       postgres:
         condition: service_healthy
@@ -44,12 +38,9 @@ services:
     build:
       context: ../../
       dockerfile: deploy/docker/dagster-webserver.Dockerfile
+    env_file: .env.production
     environment:
       DAGSTER_HOME: /app/config/dagster
-      DAGSTER_PG_HOST: postgres
-      DAGSTER_PG_USER: dagster
-      DAGSTER_PG_PASSWORD: dagster
-      DAGSTER_PG_DB: dagster
     volumes:
       - dagster-compute-logs:/app/compute_logs
     depends_on:
