fixed asset/definitions structure + cleanup docs + compose

--- a/deploy/compose/docker-compose.dev.yaml
+++ b/deploy/compose/docker-compose.dev.yaml
@@ -41,5 +41,7 @@ services:
     build:
       context: ../../
       dockerfile: deploy/docker/pluginlake.dev.Dockerfile
+    ports:
+      - "8000:8000"
     volumes:
       - ../../src:/app/src
