--- a/deploy/compose/docker-compose.yaml
+++ b/deploy/compose/docker-compose.yaml
@@ -74,6 +74,8 @@ services:
     build:
       context: ../../
       dockerfile: deploy/docker/pluginlake.Dockerfile
+    ports:
+      - "8000:8000"
     command: ["python", "-m", "pluginlake"]
 
 volumes:
