--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "duckdb>=1.4.4",
     "fastapi>=0.128.7",
     "polars>=1.38.1",
+    "pyarrow>=23.0.1",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.9.1",
 ]
@@ -117,6 +118,7 @@ strict = true
 [tool.ruff.lint.per-file-ignores]
 "tests/**/*.py" = [
     "S101",    # Use of assert
+    "S608",    # SQL injection — test assertions use f-strings with constants
     "D100",    # Missing docstring in public module
     "D103",    # Missing docstring in public function
     "D104",    # Missing docstring in public package
@@ -138,6 +140,11 @@ strict = true
     "N803",    # Argument name should be lowercase (marimo passes module refs)
     "N806",    # Variable should be lowercase (constants in notebook cells)
     "PLR0913", # Too many arguments (marimo cell dependency injection)
+]
+
+"examples/*.py" = [
+    "INP001",  # Implicit namespace package
+    "S105",    # Possible hardcoded password (example config)
 ]
 
 [tool.ruff.format]
