--- a/deploy/compose/docker-compose.yaml
+++ b/deploy/compose/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
       interval: 3s
       timeout: 1s
-      retries: 10
+      retries: 3
 
   dagster-webserver:
     build:
@@ -61,7 +61,7 @@ services:
       interval: 3s
       timeout: 1s
       start_period: 3s
-      retries: 20
+      retries: 3
     command:
       [
         "dagster", "code-server", "start",
@@ -74,8 +74,20 @@ services:
     build:
       context: ../../
       dockerfile: deploy/docker/pluginlake.Dockerfile
+    env_file: .env.production
+    environment:
+      PLUGINLAKE_SERVER_HOST: ${PLUGINLAKE_SERVER_HOST:-"0.0.0.0"}
+      PLUGINLAKE_SERVER_PORT: ${PLUGINLAKE_SERVER_PORT:-"8000"}
     ports:
-      - "8000:8000"
+      - "${PLUGINLAKE_SERVER_PORT:-8000}:${PLUGINLAKE_SERVER_PORT:-8000}"
+    healthcheck:
+      test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:${PLUGINLAKE_SERVER_PORT:-8000}/health')"]
+      interval: 5s
+      timeout: 3s
+      retries: 3
+    depends_on:
+      postgres:
+        condition: service_healthy
     command: ["python", "-m", "pluginlake"]
 
 volumes:
